Show position if in all view, fix overflow

--- a/src/app/components/tier-manager/tier-manager.scss
+++ b/src/app/components/tier-manager/tier-manager.scss
@@ -29,6 +29,7 @@
 
     &--content {
       height: 100%;
+      overflow: auto;
     }
   }
 
